--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
                 jumpscare() {
                     console.log("jumpscare")
                     this.showJumpscare = true;
-                    setTimeout(this.endJumpscareAndQueueNext, chance.integer({min: 50, max: 1000}));
+                    setTimeout(()=>this.endJumpscareAndQueueNext(), chance.integer({min: 50, max: 1000}));
                 },
 
                 endJumpscareAndQueueNext() {
                     console.log("end jumpscare")
                     this.showJumpscare = false;
-                    setTimeout(this.jumpscare, chance.integer({min: 1000*1, max: 1000*60*10}))
+                    setTimeout(()=>this.jumpscare(), chance.integer({min: 1000*1, max: 1000*60*10}))
                 },
 
-                async init() {
+                init() {
                     // At random intervals, make a jumpscare
-                    this.jumpscare()
-                    //this.endJumpscareAndQueueNext()
+                    //this.jumpscare()
+                    this.endJumpscareAndQueueNext()
                 }
             }));
         });
